--- a/project/index.html
+++ b/project/index.html
@@ -1,39 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Todo List App in JavaScript</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iconscout Link For Icons -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="task-input">
+        <img src="bars-icon.svg" alt="icon">
+        <input type="text" placeholder="Add a new task">
+      </div>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-    <title>TO-DO List</title>
-</head>
-
-<body>
-    <!-- create a container for the to-do list -->
-    <div id="todo-container">
-        <!-- to-do list header -->
-        <div id="header">
-            <h1>To-Do List</h1>
+      <div class="controls">
+        <div class="filters">
+          <span class="active" id="all">All</span>
+          <span id="pending">Pending</span>
+          <span id="completed">Completed</span>
         </div>
-        <!-- create input box-->
-        <input type="text" class= "input-item" name="input_box" id="input-box" placeholder="Add task">
-        <!-- add button -->
-        <button id="input-button" onclick="addTask()">Add</button>
-        <!-- Task list -->
-        <h2>Task List</h2>
-        <ul id="list-container"></ul>
+        <button class="clear-btn">Clear All</button>
+      </div>
+
+      <ul class="task-box"></ul>
     </div>
 
-    <hr>
+    <script src="script.js"></script>
 
-    <!-- task list counter -->
-    <div class="counter-container">
-        <div id="task-counters">
-            Completed: <span id="completed-counter">0</span> |
-            Uncompleted: <span id="uncompleted-counter">0</span>
-        </div>
-    </div>
-
-    <script type="text/javascript" src="script.js"></script>
-
-</body>
-
+  </body>
 </html>
