refactor task status terminology and update UI components for improved clarity; remove deprecated files

--- a/project/index.html
+++ b/project/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">  
-    <title>Todo List App in JavaScript</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Iconscout Link For Icons -->
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="task-input">
-        <img src="bars-icon.svg" alt="icon">
-        <input type="text" placeholder="Add a new task">
-      </div>
 
-      <div class="controls">
-        <div class="filters">
-          <span class="active" id="all">All</span>
-          <span id="pending">Pending</span>
-          <span id="completed">Completed</span>
-        </div>
-        <button class="clear-btn">Clear All</button>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>Todo List App in JavaScript</title>
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Iconscout Link For Icons -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+</head>
 
-      <ul class="task-box"></ul>
+<body>
+  <div class="wrapper">
+    <div class="task-input">
+      <img src="bars-icon.svg" alt="icon">
+      <input type="text" placeholder="Add a new task">
     </div>
 
-    <script src="script.js"></script>
+    <div class="controls">
+      <div class="filters">
+        <span class="active" id="all">All</span>
+        <span id="pending">Pending</span>
+        <span id="done">Done</span>
+      </div>
+      <button class="clear-btn">Clear All</button>
+    </div>
 
-  </body>
+    <ul class="task-box"></ul>
+
+    <!-- task list counter -->
+    <div class="counter-container">
+      <div class="task-counters">
+        Total: <span id="total-count">0</span> |
+        Done: <span id="done-count">0</span> |
+        Pending: <span id="pending-count">0</span>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+
+</body>
+
 </html>
