--- a/project/index.html
+++ b/project/index.html
@@ -36,7 +36,11 @@
         Done: <span id="done-count">0</span> |
         Pending: <span id="pending-count">0</span>
       </div>
+      
+      <!-- hiển thị thông báo lỗi -->
+      <div class="validation-message"></div>
     </div>
+
   </div>
 
   <script src="script.js"></script>
