fix: Update script references in index.html and add unit tests file

--- a/src/index.html
+++ b/src/index.html
@@ -36,15 +36,15 @@
         Done: <span id="done-count">0</span> |
         Pending: <span id="pending-count">0</span>
       </div>
-      
+
       <!-- hiển thị thông báo lỗi -->
       <div class="validation-message"></div>
     </div>
 
   </div>
 
-  <script src="script.js"></script>
-
+  <script src="app.js"></script>
+  <script src="../tests/unit_tests_v1.0.js"></script>
 </body>
 
 </html>
